tests/vendor/valid/trivial/multi_digit.c
//expect 100
//tags: trivial, simple
int main() {
    return 100;
}