tests/vendor/invalid/semantics/undeclared_var.c
//tags: simple, undeclared
int main() {
    return a;
}